Added new pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Xerox Management</title>
+    <link rel="icon" href="/assets/icon.png" type="image/png">
+    <title>Fast Xerox</title>
 </head>
 <body>
     <!-- header -->
@@ -20,9 +21,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">How it Works</a></li>
-                <li><a href="#">FAQ's</a></li>
+                <li><a href="#main1">Home</a></li>
+                <li><a href="#main2">How it Works</a></li>
+                <li><a href="#main4">FAQ's</a></li>
                 <li><a href="#">Feedback</a></li>
             </ul>
         </nav>
@@ -35,7 +36,7 @@
     <!-- main-content -->
     <main>
         <!-- section 1 -->
-        <section class="main1">
+        <section class="main1" id="main1">
             <div class="main1-left">
                 <h1>Tired of Waiting in Long Queue for Xerox?</h1>
                 <p>As a student, your time is valuable. Standing in long lines for Xerox copies is an unnecessary hassle</p>
@@ -48,7 +49,7 @@
         </section>
         <!-- section 2 -->
 
-        <section class="main2">
+        <section class="main2" id="main2">
             <h1>How it Works</h1>
             <div class="main2-magic">
                 <div class="how-it-works-container">
@@ -104,7 +105,7 @@
               
         </section>
         <!-- section 3 -->
-        <section class="main3">
+        <section class="main3" id="main3">
             <h1>People love Us!!</h1>
             <div class="main3-cards">
                 <!-- cards -->
@@ -139,7 +140,7 @@
             </div>
         </section>
         <!-- section4 -->
-        <section class="main4">
+        <section class="main4" id="main4">
             <h1>FAQ's</h1>
             <div class="qa-box">
                 <div class="question-container">
